--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,10 @@ langchain==0.1.0
 langchain-community==0.0.10
 chromadb==0.4.22
 sentence-transformers==2.2.2
-openai==1.6.1
+openai>=1.55.0
 anthropic==0.8.0
 pypdf==3.17.4
 python-docx==1.1.0
-pydantic==2.5.3
+docx2txt>=0.8
+pydantic>=2.7.4
 pydantic-settings==2.1.0
